--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title> CITAS CUAM</title>
+    <title>INICIO</title>
     <header>
-      <a class="logo" href="index.html">
+    <a class="logo" href="index.html">
         <img src="imagenes/logo_cuam.png">
-      </a>
+    </a>
+    <div class="text">
+        <h1><a href="citas/">citas</a></h1>
+    </div>
     </header>
     
 </head>
@@ -31,13 +34,13 @@
 
         <ul class="menu">
             <li>
-                <a href="#slide1">1</a>
+                <a href="#slide1"></a>
             </li>
             <li>
-                <a href="#slide2">2</a>
+                <a href="#slide2"></a>
             </li>
             <li>
-                <a href="#slide3">3</a>
+                <a href="#slide3"></a>
             </li>
         </ul>
 
