--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>INICIO</title>
     <header>
     <a class="logo" href="index.html">
-        <img src="imagenes/logo_cuam.png">
+        <img src="img/logo_cuam.png">
     </a>
     <div class="text">
         <h1><a href="citas/">citas</a></h1>
@@ -22,13 +22,13 @@
         <ul class="slider">
             <li id="slide1">
                 
-                <img src="./imagenes/capturac1.png" />
+                <img src="./img/capturac1.png" />
             </li>
             <li id="slide2">
-                <img src="./imagenes/capturac2.png" />
+                <img src="./img/capturac2.png" />
             </li>
             <li id="slide3">
-                <img src="./imagenes/capturac3.png" />
+                <img src="./img/capturac3.png" />
             </li>
         </ul>
 
