--- a/citas/index.html
+++ b/citas/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stylescitas.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styles_citas.css">
     <title>CITAS</title>
 </head>
-<body>
-    <div class="container">
-        <form class="form">
-            <h2>CITA</h2>
-            <p type="Name:"><input placeholder="Write your name here.."></input></p>
-            <p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
-            <p type="Message:"><input placeholder="What would you like to tell us.."></input></p>
-            <button>Send Message</button>
-        </form>
-    </div>
+<body class="text-center">
+    <form id="container">
+        <img class="mb-4" src="#" alt="" width="" height="">
+        <h2 class=" mb-3 fw-normal">con que asesor gusta contactar?</h2>
+        <div class="col-12 mb-3">
+            <select for="" class="form-control">
+                <option value="#">seleccione una opcion</option>
+                <option value="">asesor1</option>
+                <option value="">cargar db</option>
+            </select>
+        </div>
+        <div class="mt-4">
+            <a href="../">back</a>
+            <a href="doc.html" class="btn btn-primary w-100 py-2"> continuar</a>
+        </div>
+    </form>
 </body>
 </html>
 
