--- a/citas/doc.html
+++ b/citas/doc.html
@@ -12,11 +12,15 @@
     <div class="row mt-5">
         <div class="col-6">
             <label for="#" class="form-label">alumno</label>
-            <input type="text" class="form-control" placeholder="ej.Garcia Martinez Leonardo" name="" id="">
+            <input type="text" class="form-control" placeholder="ej.Garcia Martinez Leonardo" name="nombreALM" id="nombreALM">
+        </div>
+        <div class="col-6">
+            <label for="#" class="form-label">Nombre del padre de familia</label>
+            <input type="text" class="form-control" placeholder="ej.Garcia gustavo" name="nombrePPS" id="nombrePPS">
         </div>
         <div class="col-6 mb-3">
             <label for="#" class="form-label">grado</label>
-            <select type="text" class="form-control" placeholder="grado" name="" id="">
+            <select type="text" class="form-control" placeholder="grado" name="grado" id="grado">
                 <option value="#">seleccione su opcion</option>
                 <option value="">401</option>
                 <option value="">402</option>
@@ -27,7 +31,7 @@
         </div>
         <div class="col-6">
             <label for="#" class="form-label">modalidad</label>
-            <select type="text" class="form-control" placeholder="grado" name="" id="">
+            <select type="text" class="form-control" placeholder="modalidad" name="modalidad" id="modalidad">
                 <option value="#">seleccione su opcion</option>
                 <option value="">presencial</option>
                 <option value="">videollamada</option>
@@ -36,11 +40,11 @@
         </div>
         <div class="col-6">
             <label for="#" class="form-label">dia</label>
-            <input type="date" class="form-control" name="" id="">
+            <input type="date" class="form-control" name="dia" id="dia">
         </div>
         <div class="col-6">
             <label for="#" class="form-label">horas disponibles</label>
-            <select type="" class="form-control" name="" id="">
+            <select type="" class="form-control" name="hora" id="hora">
                 <option value="">seleccione su opcion</option>
                 <option value="">8:00AM</option>
                 <option value="">9:00AM</option>
@@ -49,7 +53,7 @@
         </div>
         <div class="col-6">
             <label for="#" class="form-label">asunto</label>
-            <input type="text" class="form-control" name="" id="">
+            <input type="text" class="form-control" name="asunto" id="asunto">
         </div>
         <div class="col-3 mt-3">
             <button class="btn btn-primary">continuar</button>
