--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="img/logo_cuam.png">
     </a>
     <div class="text">
-        <h1><a href="citas/">citas</a></h1>
+        <h1><a href="citas/doc.php">citas</a></h1>
     </div>
     </header>
     
