--- a/index.html
+++ b/index.html
@@ -2,23 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>INICIO</title>
     <header>
-    <a class="logo" href="index.html">
-        <img src="img/logo_cuam.png">
-    </a>
-    <div class="text">
-        <h1><a href="citas/">citas</a></h1>
-    </div>
+        <div class="container">
+            <div class="info">
+                <a href="https://www.facebook.com/CUAMCun" id="fb"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.tiktok.com/@prepacuam"><i class="fa-brands fa-tiktok" id="tt"></i></a>
+                <a href="https://www.instagram.com/cuam.cancun/"><i class="fa-brands fa-instagram" id="ig"></i></a>
+                <a href=""><i class="fa-brands fa-twitter" id="tw"></i></a>
+                <a href=""><i class="fa-solid fa-rectangle-list"> directorio</i></a>
+            </div>
+        </div>
+        <div class="logo">
+            <img src="img/logo_cuam.png">
+            <div class="text">
+                <a href="#"><p>conocenos</p></a>
+                <i class="fa-solid fa-grip-lines-vertical"></i>
+                <a href="#"><p>planteles</p></a>
+                <i class="fa-solid fa-grip-lines-vertical"></i>
+                <a href="#"><p>modelo academico</p></a>
+                <i class="fa-solid fa-grip-lines-vertical"></i>
+                <a href="#"><p>deportes</p></a>
+                <i class="fa-solid fa-grip-lines-vertical"></i>
+                <a href="#"><p>cultura</p></a>
+                <i class="fa-solid fa-grip-lines-vertical"></i>
+                <a href="#"><p>admisiones</p></a>
+                <i class="fa-solid fa-grip-lines-vertical" id="citas"></i>
+                <a href="citas/"><p>citas</p></a>
+                <i class="fa-solid fa-grip-lines-vertical"></i>
+                <a href="https://cuam.academic.lat/Autenticacion.aspx"><p>plataforma</p></a>
+            </div>
+        </div>
     </header>
-    
 </head>
 <body>
     <div id="cuam_slider">
-
         <ul class="slider">
             <li id="slide1">
                 
