--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <i class="fa-solid fa-grip-lines-vertical"></i>
                 <a href="#"><p>admisiones</p></a>
                 <i class="fa-solid fa-grip-lines-vertical" id="citas"></i>
-                <a href="citas/"><p>citas</p></a>
+                <a href="citas/doc.php"><p>citas</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
                 <a href="https://cuam.academic.lat/Autenticacion.aspx"><p>plataforma</p></a>
             </div>
