--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                 <img src="./img/capturac3.png" />
             </li>
         </ul>
-
         <ul class="menu">
             <li>
                 <a href="#slide1"></a>
@@ -65,9 +64,25 @@
                 <a href="#slide3"></a>
             </li>
         </ul>
-
     </div>
-
-    
+    <div class="container">
+        <div class="cont">
+            <h6>¡Bienvenido a tu prepa global! <br> Tu prepa en el CUAM te prepara para el México global en que vas a vivir, con una doble acreditación internacional tanto por la UNAM, como por la Southern Association of Independent Schools (SAIS) de los Estados Unidos que hacen tus estudios válidos en el extranjero</h6>
+            <img src="img/chicos.png" alt="">
+        </div>
+        <div class="somos">
+            <h3 style="color: green;">Quiénes Somos</h3>
+            <p style="color: rgb(0, 51, 171);">Una escuela de educación preparatoria centrada en la creatividad, la investigación, el pensamiento crítico, las competencias globales y la innovación, para contribuir en la construcción de un México de oportunidades.</p>
+            <div>
+                <img src="img/gente.png" alt="">
+            </div>
+        </div>
+        <div class="ult">
+            <h3>70% de tus profesores con posgrado</h3>
+            <img src="img/banderas.jpeg" alt="">
+            <h5>Prepa avalada por UNAM con 4 áreas especialidad</h5>
+            <img src="img/union.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
