--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
                 <a href="https://www.tiktok.com/@prepacuam"><i class="fa-brands fa-tiktok" id="tt"></i></a>
                 <a href="https://www.instagram.com/cuam.cancun/"><i class="fa-brands fa-instagram" id="ig"></i></a>
                 <a href=""><i class="fa-brands fa-twitter" id="tw"></i></a>
-                <a href=""><i class="fa-solid fa-rectangle-list"> directorio</i></a>
+                <a href=""><i class="fa-solid fa-rectangle-list"> Directorio</i></a>
             </div>
         </div>
         <div class="logo">
             <img src="img/logo_cuam.png">
             <div class="text">
-                <a href="#"><p>conocenos</p></a>
+                <a href="#"><p>Conócenos</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
-                <a href="#"><p>planteles</p></a>
+                <a href="#"><p>Planteles</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
-                <a href="#"><p>modelo academico</p></a>
+                <a href="#"><p>Modelo Academico</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
-                <a href="#"><p>deportes</p></a>
+                <a href="#"><p>Deportes</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
-                <a href="#"><p>cultura</p></a>
+                <a href="#"><p>Cultura</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
-                <a href="#"><p>admisiones</p></a>
+                <a href="#"><p>Admisio</p></a>
                 <i class="fa-solid fa-grip-lines-vertical" id="citas"></i>
-                <a href="citas/doc.php"><p>citas</p></a>
+                <a href="citas/doc.php"><p>Citas</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
-                <a href="https://cuam.academic.lat/Autenticacion.aspx"><p>plataforma</p></a>
+                <a href="https://cuam.academic.lat/Autenticacion.aspx"><p>Plataforma</p></a>
             </div>
         </div>
     </header>
