--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <i class="fa-solid fa-grip-lines-vertical"></i>
                 <a href="#"><p>Cultura</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
-                <a href="#"><p>Admisio</p></a>
+                <a href="#"><p>Admisión</p></a>
                 <i class="fa-solid fa-grip-lines-vertical" id="citas"></i>
                 <a href="citas/doc.php"><p>Citas</p></a>
                 <i class="fa-solid fa-grip-lines-vertical"></i>
